objects/EUR_CRM_Survey_Question__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Question__c</fullName>
        <label>Question</label>
        <referenceTo>EUR_CRM_Question__c</referenceTo>
        <relationshipName>Survey_Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Survey_Header__c</fullName>
        <label>Survey Header</label>
        <referenceTo>EUR_CRM_Survey_Header__c</referenceTo>
        <relationshipName>Survey_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Question (EU)</label>
    <listViews>
        <fullName>All_BE_Surveys_Questions</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>EUR_CRM_Survey_Header__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Question__c.EUR_BE_Survey_Question</value>
        </filters>
        <label>All BE Surveys Questions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SQN-{000000}</displayFormat>
        <label>Survey Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Survey_Question</fullName>
        <active>true</active>
        <label>EUR BE Survey Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Survey_Question</fullName>
        <active>true</active>
        <label>EUR BG Survey Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_DE_Survey_Question</fullName>
        <active>true</active>
        <label>DE Survey Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Survey_Question</fullName>
        <active>true</active>
        <description>Record Type for DK Survey Questions</description>
        <label>EUR DK Survey Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Survey_Question</fullName>
        <active>true</active>
        <label>EUR FI Survey Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Survey_Question</fullName>
        <active>true</active>
        <label>EUR RU Survey Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Survey_Question</fullName>
        <active>true</active>
        <label>EUR ZA Survey Question</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>